2015-01-07  Mikey Austin  <mikey@greyd.org>

	* New PF firewall driver and OpenBSD portability changes.
	* Small bug fixes in error reporting for useability.

2015-01-01  Mikey Austin  <mikey@greyd.org>

	* Initial development release of greyd.