@@ -1,3 +1,7 @@
+2015-01-08  Mikey Austin  <mikey@dexter.ayuda>
+
+	* Minor bug fix in netfilter driver preventing greylogd from operating.
+
 2015-01-07  Mikey Austin  <mikey@greyd.org>
 
 	* New PF firewall driver and OpenBSD portability changes.
